# RedTeamCUA-national

./: .env.example  .gitignore  AZURE_OPENAI_SETUP.md  DOCKER_SETUP_GUIDE.md  EXPERIMENT_GUIDE.md  MULTI_MODEL_GUIDE.md  MULTI_MODEL_SUMMARY.md  README.md  README_GITHUB.md  check_services.ps1  croissant_metadata.json  deploy.sh  docker-compose.yml  download_image_local.py  example_task_config.json  fix_owncloud_config.py  fix_owncloud_simple.py  generate_config.ps1  generate_config.py  generate_config.sh  generate_config_for_defense_test.py  generate_config_for_end2end_test.py  generate_config_for_pointer_test.py  generate_paper_based_results.py  lib_run_single.py  paper_based_evaluation_config.json  paper_results_visualization.py  pyproject.toml  requirements.txt  run.py  set_env_vars.ps1  set_multi_model_api.ps1  set_openai_api.ps1  setup-web-services.ps1  setup-web-services.sh  test_agent_init.py  test_kimi_agent.py  test_kimi_init.py  test_multi_model_api.py  test_openai_api.py  (+3 more)
adv/TheAgentCompany_OwnCloud/: if_ready.py  injection.py  reset.sh
adv/TheAgentCompany_RocketChat/: human_user_agent.py  if_ready.py  reset.sh  run_multi_npc.py  run_one_npc.py  server.py
adv/WebArena_Reddit/: if_ready.py  injection.py  preprocess.py
desktop_env/: desktop_env.py
desktop_env/controllers/: python.py  setup.py
desktop_env/providers/: __init__.py  base.py
evaluation_examples/: test_all.json  test_all_owncloud.json  test_all_reddit.json  test_all_rocketchat.json
goals/adv/: adv_goals_generate_owncloud.py  adv_goals_generate_reddit.py  adv_goals_generate_rocketchat.py  adversary_task.raw_own_owncloud_docker_entry.json  adversary_task.raw_own_owncloud_linux_tutorial.json  adversary_task.raw_own_owncloud_setup_project.json  adversary_task.raw_own_reddit_alias_tmux.json  (+5 more)
mm_agents/: agent.py  prompts.py  uitars_agent.py  utils.py
(+2214 files in other folders)
