[project]
name = "RedTeamCUA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "anthropic~=0.49.0",
    "azure-identity>=1.21.0",
    "azure-mgmt-compute>=34.1.0",
    "azure-mgmt-network>=28.1.0",
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "borb>=2.1.25",
    "boto3>=1.37.37",
    "chardet>=5.2.0",
    "cssselect>=1.3.0",
    "dashscope>=1.23.1",
    "docker>=7.1.0",
    "easyocr>=1.7.2",
    "fabric>=3.2.2",
    "fastdtw>=0.3.4",
    "flask~=3.0.0",
    "formulas>=1.2.9",
    "func-timeout>=4.3.5",
    "gdown>=5.2.0",
    "google-generativeai>=0.8.5",
    "groq>=0.22.0",
    "gymnasium~=0.28.1",
    "imagehash>=4.3.2",
    "librosa>=0.11.0",
    "litellm>=1.71.1",
    "loguru>=0.7.3",
    "lxml>=5.3.2",
    "matplotlib~=3.7.4",
    "mutagen>=1.47.0",
    "nltk~=3.9.1",
    "numpy~=1.26.4",
    "odfpy>=1.4.1",
    "openai>=1.75.0",
    "opencv-python~=4.8.1.78",
    "openpyxl>=3.1.5",
    "pandas~=2.2.3",
    "pdfplumber>=0.11.6",
    "pillow~=11.0.0",
    "playwright>=1.51.0",
    "psutil~=5.9.6",
    "pyacoustid>=1.3.0",
    "pyautogui~=0.9.54",
    "pydrive>=1.3.1",
    "pygame>=2.6.1",
    "pygetwindow>=0.0.9",
    "pymupdf>=1.25.5",
    "pynput~=1.7.6",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.13.0",
    "requests~=2.32.3",
    "requests-toolbelt~=1.0.0",
    "rocketchat-api~=1.32.0",
    "scikit-image>=0.25.2",
    "sotopia==0.1.2",
    "termcolor~=3.0.1",
    "tiktoken>=0.9.0",
    "tqdm~=4.65.0",
    "transformers~=4.35.2",
    "wandb>=0.19.9",
    "wrapt-timeout-decorator>=1.5.1",
    "xmltodict>=0.14.2",
]
